--- a/res/css/main.css
+++ b/res/css/main.css
@@ -1,14 +1,16 @@
 * {
   margin: 0;
   padding: 0;
+
 }
 
 body {
   background-color: #000;
+  overflow: hidden;
 }
 
 #lead {
-  width: 90%;
+  width: 95%;
   min-width: 300px;
 }
 
@@ -23,10 +25,9 @@ body {
 
 .hexanote li {
   display: inline-block;
-  margin-left: 25px;
-  margin-right: 25px;
+  margin-right: 50px;
   font-family: Open Sans, Arial;
-  font-weight: 300;
+  font-weight: 100;
   font-size: 4em;
   color: #fff;
   opacity: 1;
@@ -51,18 +52,26 @@ body {
 .hexanote.hidden li:nth-child(8) { transform: translateX(60px) translateY(-200px); }
 
 .hexagon {
-  position: absolute;
-  max-width: 450px;
+  display: inline-block;
+  margin: 0 auto;
+  margin-top: 10%;
+  max-width: 350px;
   width: 40%;
   min-width: 320px;
   height: auto;
   opacity: 0;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  filter: hue-rotate(120deg);
+  fill: #fff;
 }
 
 .hexagon-container {
-  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   height: 100vh;
+  width: 100vw;
+}
+
+.polygon {
+  fill: #000;
 }
