--- a/res/css/main.css
+++ b/res/css/main.css
@@ -8,9 +8,26 @@ body {
   overflow: hidden;
 }
 
-#lead {
-  width: 95%;
-  min-width: 300px;
+.hexagon {
+  display: inline-block;
+  margin: 0 auto;
+  margin-top: 5%;
+  max-width: 325px;
+  width: 40%;
+  min-width: 320px;
+  height: auto;
+  opacity: 0;
+  -webkit-animation: spin 10s linear infinite;
+  -moz-animation: spin 10s linear infinite;
+  animation: spin 10s linear infinite;
+}
+
+.hexagon-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
 }
 
 .hexanote {
@@ -20,6 +37,10 @@ body {
   left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
+}
+
+.hexanote.hidden li {
+  opacity: 0;
 }
 
 .hexanote li {
@@ -37,18 +58,46 @@ body {
   margin-right: 0;
 }
 
-.hexanote.hidden li {
-  opacity: 0;
+.hexanote.hidden li:nth-child(1) {
+  transform: translateX(-200px) translateY(-200px);
 }
 
-.hexanote.hidden li:nth-child(1) { transform: translateX(-200px) translateY(-200px); }
-.hexanote.hidden li:nth-child(2) { transform: translateX(20px) translateY(100px); }
-.hexanote.hidden li:nth-child(3) { transform: translateX(-150px) translateY(-80px); }
-.hexanote.hidden li:nth-child(4) { transform: translateX(10px) translateY(-200px); }
-.hexanote.hidden li:nth-child(5) { transform: translateX(-300px) translateY(200px); }
-.hexanote.hidden li:nth-child(6) { transform: translateX(20px) translateY(-40px); }
-.hexanote.hidden li:nth-child(7) { transform: translateX(30px) translateY(200px); }
-.hexanote.hidden li:nth-child(8) { transform: translateX(60px) translateY(-200px); }
+.hexanote.hidden li:nth-child(2) { 
+  transform: translateX(20px) translateY(100px);
+}
+
+.hexanote.hidden li:nth-child(3) {
+  transform: translateX(-150px) translateY(-80px);
+}
+
+.hexanote.hidden li:nth-child(4) {
+  transform: translateX(10px) translateY(-200px);
+}
+
+.hexanote.hidden li:nth-child(5) {
+  transform: translateX(-300px) translateY(200px);
+}
+
+.hexanote.hidden li:nth-child(6) {
+  transform: translateX(20px) translateY(-40px);
+}
+
+.hexanote.hidden li:nth-child(7) {
+  transform: translateX(30px) translateY(200px);
+}
+
+.hexanote.hidden li:nth-child(8) {
+  transform: translateX(60px) translateY(-200px);
+}
+
+#lead {
+  width: 95%;
+  min-width: 300px;
+}
+
+.subject {
+  color: #fff;
+}
 
 .subject-list {
   width: 100%;
@@ -67,44 +116,37 @@ body {
 .subject-list li {
   display: inline-block;
   margin-right: 20px;
-  font-family: Open Sans, Arial;
+  font-family: Helvetica;
   font-weight: 700;
   font-size: 1em;
-  color: #fff;
-  opacity: 1;
-  transition: all 2.5s ease;
+  transition: all 0.5s ease;
+  letter-spacing: 1px;
   text-transform: uppercase;
   cursor: pointer;
 }
 
-.subject-list li:nth-child(1) { color: #1abc9c }
-.subject-list li:nth-child(2) { color: #f1c40f }
-.subject-list li:nth-child(3) { color: #e74c3c }
-.subject-list li:nth-child(4) { color: #2980b9 }
-.subject-list li:nth-child(5) { color: #9b59b6 }
-.subject-list li:nth-child(6) { color: #95a5a6 }
-
-.hexagon {
-  display: inline-block;
-  margin: 0 auto;
-  margin-top: 5%;
-  max-width: 325px;
-  width: 40%;
-  min-width: 320px;
-  height: auto;
-  opacity: 0;
-  fill: #fff;
-  -webkit-animation:spin 10s linear infinite;
-  -moz-animation:spin 10s linear infinite;
-  animation:spin 10s linear infinite;
+.subject:nth-child(1):hover { 
+  color: #1abc9c!important; 
 }
 
-.hexagon-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+.subject:nth-child(2):hover {
+  color: #f1c40f!important;
+}
+
+.subject:nth-child(3):hover {
+  color: #e74c3c!important;
+}
+
+.subject:nth-child(4):hover {
+  color: #2980b9!important;
+}
+
+.subject:nth-child(5):hover {
+  color: #9b59b6!important;
+}
+
+.subject:nth-child(6):hover {
+  color: #95a5a6!important;
 }
 
 .polygon {
@@ -113,6 +155,20 @@ body {
   transition: stroke 1s;
 }
 
-@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+@-moz-keyframes spin { 
+  100% { 
+    -moz-transform: rotate(360deg);
+  } 
+}
+
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+  } 
+}
+
+@keyframes spin {
+  100% {
+    transform:rotate(360deg);
+  }
+}
