--- a/res/css/main.css
+++ b/res/css/main.css
@@ -45,17 +45,22 @@ body {
 
 .hexanote li {
   display: inline-block;
-  margin-right: 50px;
-  font-family: Open Sans, Arial;
-  font-weight: 300;
+  margin-right: 25px;
+  margin-left: 25px;
+  font-weight: 400;
   font-size: 3em;
   color: #fff;
   opacity: 1;
+  font-family: 'Open Sans';
   transition: all 2.5s ease;
 }
 
 .hexanote li:last-child {
   margin-right: 0;
+}
+
+.hexanote li:first-child {
+  margin-left: 0;
 }
 
 .hexanote.hidden li:nth-child(1) {
@@ -116,11 +121,11 @@ body {
 .subject-list li {
   display: inline-block;
   margin-right: 20px;
-  font-family: Helvetica;
-  font-weight: 700;
+  font-family: 'Open Sans';
+  font-weight: 400;
   font-size: 1em;
   transition: all 0.5s ease;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   text-transform: uppercase;
   cursor: pointer;
 }
